@@ -1,0 +1,21 @@
+package support;
+
+public final class Fibonacci {
+
+    public static int compute(int n) {
+        int result = 0;
+
+        if (n <= 1) {
+            result = n;
+        } else {
+            result = compute(n - 1) + compute(n - 2);
+        }
+
+        return result;
+    }
+
+    private Fibonacci() {
+
+    }
+
+}
