@@ -9,6 +9,10 @@ IMPORTANT CHANGES
 
 * Moved com.github.qacore.testingtoolbox.patterns.pageobjects.* to com.github.qacore.testingtoolbox.selenium.support.pageobjects.*
 
+OTHER INCLUSIONS
+
+* com.github.qacore.testingtoolbox.junit.runners.ParallelParameterized.TEST_THREADS_COUNT
+
 OTHER CHANGES
 
 * Now AbstractPageObjects extends ManagedWebDriverContext
